# serviceinfo-typegen

./: README.md  openapi.json  pyproject.toml
builder/: generate_package.py  toml_generator.py
lmos_serviceinfo_types/: __init__.py
